--- a/styles.css
+++ b/styles.css
@@ -153,3 +153,11 @@ button {
   cursor: pointer;
   margin-bottom: 2px;
 }
+.watermark {
+  position: fixed;
+  top: 10px;
+  right: 10px;
+  color: rgb(255, 255, 255); /* Cor da marca d'água (preto transparente) */
+  font-size: 16px;
+  pointer-events: none; /* Garante que a marca d'água não interfira com eventos de clique */
+}
