--- a/styles.css
+++ b/styles.css
@@ -15,13 +15,13 @@ input {
   box-sizing: border-box;
 }
 body {
-  padding-top: 100px;
+  margin: 0;
+  padding: 0;
   font-family: Arial, sans-serif;
   background-color: #282828;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
   flex-direction: column;
 }
 .container {
@@ -106,10 +106,11 @@ input[type="color"] {
   }
 }
 .characters-table {
-  margin-top: 300px;
   background-color: #fff;
   margin-bottom: 30px;
+  border-radius: 1%;
 }
+
 .brush-button {
   background: linear-gradient(to right, indigo, #00f, green, orange, red);
   color: #fff;
@@ -134,7 +135,7 @@ button {
 }
 #updateButton {
   border-radius: 50%;
-  margin-left: 265px;
+  margin-left: 200px;
   margin-bottom: 2px;
 }
 #updateButton:hover,
@@ -160,4 +161,19 @@ button {
   color: rgb(255, 255, 255); /* Cor da marca d'água (preto transparente) */
   font-size: 16px;
   pointer-events: none; /* Garante que a marca d'água não interfira com eventos de clique */
+}
+
+.popup {
+  display: none;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 20px;
+  background-color: #282828;
+  border: 5px solid #000000;
+  color: #fff;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  z-index: 1000;
+  border-radius: 10%;
 }
