--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,10 @@ body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  background-image: url("tibia\ teste.jpg"); /* Substitua 'background.jpg' pelo nome do seu arquivo de imagem */
+  background-size: cover; /* Isso fará com que a imagem cubra todo o fundo */
+  background-position: center;
+  background-attachment: fixed; /* Mantém a imagem fixa enquanto você rola a página */
 }
 .container {
   background-color: #fff;
